--- a/custom_drop/Cargo.toml
+++ b/custom_drop/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
-name = "gproxy"
+name = "custom_drop"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 proc-macro = true
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+
+
 
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2", features = ["full"] }
 
-
-[dev-dependencies]
-spin = "0"
