--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -21,6 +21,7 @@ int-enum = "1"
 riscv = "0.11"
 log = { version = "0", optional = true }
 pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }
+spin = "0"
 
 [features]
 default = ["log"]
