add loader crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "domain_main",
     "gproxy",
     "interface",
-    "ksync",
+    "ksync", "loader",
     "malloc",
     "rref",
     "storage",
