feat: use unwinding crate for rust unwind
update toolchain

--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -8,6 +8,5 @@ edition = "2021"
 [dependencies]
 
 
-[features]
-default = ["qemu_riscv"]
-qemu_riscv = []
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(vf2)','cfg(qemu_riscv)'] }
