--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -13,7 +13,6 @@ domain_main = { path = "../domain_main" }
 corelib = { path = "../corelib", features = ["core_impl"]}
 task_meta = { path = "../task_meta" }
 rref = { path = "../rref" }
-unwind = { path = "../../base/unwind" }
 
 pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
 memory_addr = { git ="https://github.com/os-module/memory_addr" }
@@ -22,6 +21,14 @@ riscv = "0.11"
 log = { version = "0", optional = true }
 pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }
 spin = "0"
+unwinding = { version = "0.2.3", default-features = false,  features = [
+    "unwinder",
+    "fde-gnu-eh-frame-hdr",
+    "panic",
+    "personality"
+]}
+
+
 
 [features]
 default = ["log"]
