--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -12,7 +12,7 @@ ksync = { path = "../ksync" }
 domain_main = { path = "../domain_main" }
 corelib = { path = "../corelib", features = ["core_impl"] }
 task_meta = { path = "../task_meta" }
-rref = { path = "../rref" }
+shared_heap = { path = "../shared_heap" }
 
 pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
 memory_addr = { git = "https://github.com/os-module/memory_addr" }
