--- a/interface/Cargo.toml
+++ b/interface/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rref = { path = "../rref" }
+shared_heap = { path = "../shared_heap" }
 gproxy = { path = "../gproxy" }
 log = "0"
 task_meta = { path = "../task_meta" }
