--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -29,7 +29,7 @@ unwinding = { git = "https://github.com/nbdd0121/unwinding", rev = "ff0e91b", de
     "panic",
     "personality",
 ] }
-
+getrandom = "0.3.1"
 
 [features]
 default = ["log"]
